Using the table schema method